updated color of jaka in pie chart

--- a/templates/index.html
+++ b/templates/index.html
@@ -183,7 +183,7 @@
                         '#F0EAAC',  // WFH
                         '#800000',  // Wise Production Area
                         '#674188',  // Vendor
-                        '#FF9100'   // JAKA - 5th Floor
+                        '#BEDC74'   // JAKA - 5th Floor
                     ],
                     hoverOffset: 4
                 }]
