--- a/templates/systemusers.html
+++ b/templates/systemusers.html
@@ -1,11 +1,123 @@
 {% extends 'base.html' %}
+
 {% block title %}
 <title>System Users</title>
 {% endblock %}
+
 {% block content %}
-<main><div class="container-fluid">{% with messages = get_flashed_messages() %}{% if messages %}<ul class="alert alert-success" id="flash-messages">{% for message in messages %}<li>{{ message }}</li>{% endfor %}</ul>{% endif %}{% endwith %}<h1 class="mt-4"><i class="fas fa-users"></i> System Users</h1><br><ol class="breadcrumb mb-4"><li class="breadcrumb-item"><a href="/index">Dashboard</a></li><li class="breadcrumb-item active">System Users</li></ol><div class="card mb-4"><div class="card-header">Manage Users</div><div class="card-body"><div class="card mb-4"><div class="card-header"><i class="fas fa-user-cog"></i><b>Users Table</b></div><div class="card-body"><div class="table-responsive">{% if users|length < 1 %}<h4>There are no users. Add one above</h4>{% else %}<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0"><thead><tr><th>Email</th><th>Name</th><th>Password</th><th>Role</th><th>Actions</th></tr></thead>
-        <tbody>{% for user in users %}<tr><td>{{ user.email }}</td><td>{{ user.name }}</td><td>{{ user.password }}</td><td>{{ user.user_role }}</td><td><a href="/edit_user/{{ user.email }}" class="btn btn-warning"><i class="fas fa-edit"></i></a><a href="/confirm-delete/{{ user.email }}" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a></td></tr>{% endfor %}</tbody></table>{% endif %}</div></div></div><div class="card mb-4"><div class="card-header"><b>Add New User</b></div><div class="card-body"><form action="/add-user" method="POST"><div class="form-group row mb-3"><label for="email" class="col-sm-2 col-form-label">Email</label><div class="col-sm-4"><input type="email" class="form-control form-control-sm" name="email" id="email" required></div></div><div class="form-group row mb-3"><label for="name" class="col-sm-2 col-form-label">Name</label><div class="col-sm-4"><input type="text" class="form-control form-control-sm" name="name" id="name" required></div></div><div class="form-group row mb-3"><label for="password" class="col-sm-2 col-form-label">Password</label><div class="col-sm-4"><input type="password" class="form-control form-control-sm" name="password" id="password" required></div></div>
-        <div class="form-group row mb-3"><label for="role" class="col-sm-2 col-form-label">User-Role</label><div class="col-sm-4"><select class="form-control form-control-sm" name="role" id="role" required><option value="" disabled selected>Select user-role</option><option value="Super-Admin">Super-Admin</option><option value="Admin">Admin</option><option value="Super-User">Super-User</option><option value="User">User</option></select></div></div><div class="form-group row"><div class="col-sm-4 offset-sm-2"><button type="submit" class="btn btn-primary btn-sm">Add User</button></div></div></form></div></div></div></div></div></div></main>
+<main>
+    <div class="container-fluid">
+        <!-- Flash Messages -->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class="alert alert-success" id="flash-messages">
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+        
+        <h1 class="mt-4"><i class="fas fa-users"></i> System Users</h1>
+        <br><ol class="breadcrumb mb-4">
+            <li class="breadcrumb-item"><a href="/index">Dashboard</a></li>
+            <li class="breadcrumb-item active">System Users</li>
+        </ol>
+        <div class="card mb-4">
+            <div class="card-header">Manage Users</div>
+            <div class="card-body">
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <i class="fas fa-user-cog"></i>
+                        <b>Users Table</b>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            {% if users|length < 1 %}
+                            <h4>There are no users. Add one above</h4>
+                            {% else %}
+                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                <thead>
+                                    <tr>
+                                        <th>Email</th>
+                                        <th>Name</th>
+                                        <th>Password</th>
+                                        <th>Role</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for user in users %}
+                                    <tr>
+                                        <td>{{ user.email }}</td>
+                                        <td>{{ user.name }}</td>
+                                        <td>{{ user.password }}</td>
+                                        <td>{{ user.user_role }}</td>
+                                        <td>
+                                            <a href="/edit_user/{{ user.email }}" class="btn btn-warning">
+                                                <i class="fas fa-edit"></i>
+                                            </a>
+                                            <a href="/confirm-delete/{{ user.email }}" class="btn btn-danger">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </a>
+                                        </td>       
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-4">
+                    <div class="card-header"><b>Add New User</b></div>
+                    <div class="card-body">
+                        <form action="/add-user" method="POST">
+                            <div class="form-group row mb-3">
+                                <label for="email" class="col-sm-2 col-form-label">Email</label>
+                                <div class="col-sm-4">
+                                    <input type="email" class="form-control form-control-sm" name="email" id="email" required>
+                                </div>
+                            </div>
+                            <div class="form-group row mb-3">
+                                <label for="name" class="col-sm-2 col-form-label">Name</label>
+                                <div class="col-sm-4">
+                                    <input type="text" class="form-control form-control-sm" name="name" id="name" required>
+                                </div>
+                            </div>
+                            <div class="form-group row mb-3">
+                                <label for="password" class="col-sm-2 col-form-label">Password</label>
+                                <div class="col-sm-4">
+                                    <input type="password" class="form-control form-control-sm" name="password" id="password" required>
+                                </div>
+                            </div>
+                            <div class="form-group row mb-3">
+                                <label for="role" class="col-sm-2 col-form-label">User-Role</label>
+                                <div class="col-sm-4">
+                                    <select class="form-control form-control-sm" name="role" id="role" required>
+                                        <option value="" disabled selected>Select user-role</option>
+                                        <option value="Super-Admin">Super-Admin</option>
+                                        <option value="Admin">Admin</option>
+                                        <option value="Super-User">Super-User</option>
+                                        <option value="User">User</option>
+                                    </select>
+                                </div>
+                            </div>
+                            
+                            <div class="form-group row">
+                                <div class="col-sm-4 offset-sm-2">
+                                    <button type="submit" class="btn btn-primary btn-sm">Add User</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div> 
+                </div> 
+            </div>
+        </div>
+    </div>
+</main>
+
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         // Set a timer to remove flash messages after 5 seconds
@@ -17,4 +129,5 @@
         }, 5000); // 5000 milliseconds = 5 seconds
     });
 </script>
+
 {% endblock %}
