--- a/templates/workstation.html
+++ b/templates/workstation.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
+
 {% block title %}
 <title>IT Asset Management System</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='workstation.css') }}">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <style>
     body {
@@ -67,7 +69,47 @@
     }
 </style>
 
-{% endblock %}{% block content %}<main><div class="container-fluid"><h1 class="mt-4"><i class="fas fa-laptop"></i> Workstation</h1><br><ol class="breadcrumb mb-4"><li class="breadcrumb-item"><a href="/index">Dashboard</a></li><li class="breadcrumb-item active" aria-current="page">Workstation</li></ol></div><div class="form-group row justify-content-center"><div class="col-md-4"><label for="floorSelect">Select Floor</label><select class="form-control" id="floorSelect" name="floor" onchange="showFloorImage()"><option value="" disabled selected>Select Floor</option><option value="7th Floor">7th Floor</option><option value="19th Floor">19th Floor</option><option value="21st Floor">21st Floor</option><option value="32nd Floor">32nd Floor</option></select></div></div><div class="form-group row justify-content-center"><div class="col-md-6"><img id="floorImage" src="" alt="Floor Image" style="width:100%; display:none;" onclick="toggleFullScreen()"></div></div>{% if session['user_role'] in ['Super-Admin', 'Admin'] %}<div class="form-group row justify-content-center"><div class="col-md-4 upload-form"><form id="uploadForm" enctype="multipart/form-data"><label for="newImage">Upload New Image</label><input type="file" class="form-control-file" id="newImage" name="newImage"><button type="button" class="btn btn-primary mt-2" onclick="uploadImage()">Upload</button></form></div></div>{% endif %}</main>
+{% endblock %}
+
+{% block content %}
+<main>
+    <div class="container-fluid">
+        <h1 class="mt-4"><i class="fas fa-laptop"></i> Workstation</h1>
+        <br>
+        <ol class="breadcrumb mb-4">
+            <li class="breadcrumb-item"><a href="/index">Dashboard</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Workstation</li>
+        </ol>
+    </div>
+    <div class="form-group row justify-content-center">
+        <div class="col-md-4">
+            <label for="floorSelect">Select Floor</label>
+            <select class="form-control" id="floorSelect" name="floor" onchange="showFloorImage()">
+                <option value="" disabled selected>Select Floor</option>
+                <option value="7th Floor">7th Floor</option>
+                <option value="19th Floor">19th Floor</option>
+                <option value="21st Floor">21st Floor</option>
+                <option value="32nd Floor">32nd Floor</option>
+            </select>
+        </div>
+    </div>
+    <div class="form-group row justify-content-center">
+        <div class="col-md-6">
+            <img id="floorImage" src="" alt="Floor Image" style="width:100%; display:none;" onclick="toggleFullScreen()">
+        </div>
+    </div>
+    {% if session['user_role'] in ['Super-Admin', 'Admin'] %}
+    <div class="form-group row justify-content-center">
+        <div class="col-md-4 upload-form">
+            <form id="uploadForm" enctype="multipart/form-data">
+                <label for="newImage">Upload New Image</label>
+                <input type="file" class="form-control-file" id="newImage" name="newImage">
+                <button type="button" class="btn btn-primary mt-2" onclick="uploadImage()">Upload</button>
+            </form>
+        </div>
+    </div>
+    {% endif %}
+</main>
 
 <script>
     let currentFloor = '';
@@ -75,7 +117,8 @@
     function showFloorImage() {
         var floorSelect = document.getElementById('floorSelect');
         var floorImage = document.getElementById('floorImage');
-        currentFloor = floorSelect.value; // Store the current floor   
+        currentFloor = floorSelect.value; // Store the current floor
+        
         var imageUrl = '';
         switch(currentFloor) {
             case '7th Floor':
@@ -99,9 +142,11 @@
             floorImage.style.display = 'none';
         }
     }
+
     function uploadImage() {
         var formData = new FormData(document.getElementById('uploadForm'));
         formData.append('floor', currentFloor); // Use the stored current floor
+
         fetch('/upload_floor_image', {
             method: 'POST',
             body: formData
@@ -122,6 +167,7 @@
             alert('Image upload failed!');
         });
     }
+
     function toggleFullScreen() {
         var floorImage = document.getElementById('floorImage');
         if (!document.fullscreenElement) {
