--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><b>Storage Room</b></td>
+                                        <td>Storage Room</td>
                                         <td id="storageRoomCount" class="font-weight-normal text-dark">{{ storage_room_count }}</td>
                                     </tr>
                                     <tr>
